--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!doctype>
 <html>
 please stay and enjoy your self
+  https://web.roblox.com/games/10851599/Robloxs-Got-Talent?refPageId=4f0c687d-9e73-4a3f-bfc7-82cd07ff6c6c
+  https://www.youtube.com/watch?v=3Ffa0hUd4Ic
+  flamingo vid above this text
+  credit flamingo
+ https://discord.com/channels/733346752823820413/733346752823820416
+  
 </html>
