--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@ please stay and enjoy your self
   flamingo vid above this text
   credit flamingo
  https://discord.com/channels/733346752823820413/733346752823820416
+  if you want my discord there it is :D
+  this web site was made my coding fyi
+  please do not put anything innapropreate
+  my spelling is bad :/
   
 </html>
