--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!doctype>
 <html>
-please stay and enjoy your self
-  https://web.roblox.com/games/10851599/Robloxs-Got-Talent?refPageId=4f0c687d-9e73-4a3f-bfc7-82cd07ff6c6c
-  https://www.youtube.com/watch?v=3Ffa0hUd4Ic
-  flamingo vid above this text
-  credit flamingo
- https://discord.com/channels/733346752823820413/733346752823820416
-  if you want my discord there it is :D
-  this web site was made my coding fyi
-  please do not put anything innapropreate
-  my spelling is bad :/
-  https://giphy.com/gifs/vizmedia-jojo-kiJEGxbplHfT5zkCDJ/embed
-</html>
+ <iframe src="https://giphy.com/embed/kiJEGxbplHfT5zkCDJ" width="480" height="252" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/vizmedia-jojo-kiJEGxbplHfT5zkCDJ">via GIPHY</a></p>
+
